2008-02-14  Sebastien Pouliot  <sebastien@ximian.com>

	* CecilRocks.cs: New. Shared rocks on other Cecil types 
	(IMetadataTokenProviderRock).
	* CustomAttributeRocks.cs: Fix exception argument.
	* TypeRocks.cs: Added AllMethods to return an IEnumerable with
	all methods *and* constructors. Fixed GetMethod methods to use it.
	Add IsDelegate.

2008-02-07  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodRocks.cs: Remove IsGetter and IsSetter since they are now 
	properties in Cecil (SVH HEAD) and break the build.
	* TypeRocks.cs: Remove obsoleted GetFinalizer since Nestor fixed all
	their uses in the rules.

2008-02-06  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: IsAttribute now works on a TypeReference. Fix 
	IsVisible documentation (it needs a TypeDefinition). Rework 
	IsGeneratedCode to ensure it catch the <Module> type (which is not
	marked with an attribute).

2008-01-30  Sebastien Pouliot  <sebastien@ximian.com>

	* CommonRocks.cs: New. Shared but not Gendarme/Cecil specific rocks.
	ListRocks by Andreas Noever.

2008-01-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* FieldRocks.cs: Add IsVisible rock [Andreas Noever]
	* MethodRocks.cs: Add IsVisible rock [Andreas Noever]
	* TypeRocks.cs: Add IsVisible rock [Andreas Noever]

2008-01-19  Sebastien Pouliot  <sebastien@ximian.com> 

	* TypeRocks.cs: Handle nested types in IsGeneratedCode for all
	framework versions.

2008-01-18  Sebastien Pouliot  <sebastien@ximian.com> 

	* TypeRocks.cs: Add [Get|Has]Method rocks from Andreas Noever. Mark
	GetFinalizer as obsolete (will be removed soon).

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* MethodRocks.cs: Add IsFinalizer [Daniel Abramov]
	* TypeRocks.cs: Rework GetFinalizer to use MethodRocks.IsFinalizer

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Add IsNative [Andreas Noever]

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Add IsFloatingPoint rock and update IsGeneratedCode