@@ -37,36 +37,50 @@ namespace Gendarme.Framework.Rocks {
 		/// <summary>
 		/// Check if the field contains an attribute of a specified type.
 		/// </summary>
-		/// <param name="self">The FieldDefinition on which the extension method can be called.</param>
+		/// <param name="self">The FieldReference on which the extension method can be called.</param>
 		/// <param name="attributeName">Full name of the attribute class</param>
 		/// <returns>True if the field contains an attribute of the same name,
 		/// False otherwise.</returns>
-		public static bool HasAttribute (this FieldDefinition self, string attributeName)
+		public static bool HasAttribute (this FieldReference self, string attributeName)
 		{
-			return self.CustomAttributes.ContainsType (attributeName);
+			return self.Resolve ().CustomAttributes.ContainsType (attributeName);
 		}
 
 		/// <summary>
 		/// Check if the field was generated by the compiler or a tool (i.e. not by the developer).
 		/// This can occurs (compiler) with auto-implemented properties (C# 3)
 		/// </summary>
-		/// <param name="self">The FieldDefinition on which the extension method can be called.</param>
+		/// <param name="self">The FieldReference on which the extension method can be called.</param>
 		/// <returns>True if the field was not added directly by the developer, False otherwise</returns>
-		public static bool IsGeneratedCode (this FieldDefinition self)
+		public static bool IsGeneratedCode (this FieldReference self)
 		{
-			return self.CustomAttributes.ContainsAnyType (CustomAttributeRocks.GeneratedCodeAttributes);
+			return self.Resolve ().CustomAttributes.ContainsAnyType (CustomAttributeRocks.GeneratedCodeAttributes);
 		}
 
 		/// <summary>
 		/// Check if the field is visible outside of the assembly.
 		/// </summary>
-		/// <param name="self">The FieldDefinition on which the extension method can be called.</param>
+		/// <param name="self">The FieldReference on which the extension method can be called.</param>
 		/// <returns>True if the field can be used from outside of the assembly, false otherwise.</returns>
-		public static bool IsVisible (this FieldDefinition self)
+		public static bool IsVisible (this FieldReference self)
 		{
-			if (self.IsPrivate || self.IsAssembly)
+			FieldDefinition field = self.Resolve ();
+			if (field.IsPrivate || field.IsAssembly)
 				return false;
-			return ((TypeDefinition) self.DeclaringType).IsVisible ();
+			return field.DeclaringType.Resolve ().IsVisible ();
+		}
+
+		/// <summary>
+		/// Resolve a FieldReference into a FieldDefinition.
+		/// </summary>
+		/// <param name="self">The FieldReference on which the extension method can be called.</param>
+		/// <returns>A FieldDefinition if resolved, null otherwise.</returns>
+		public static FieldDefinition Resolve (this FieldReference self)
+		{
+			FieldDefinition field = (self as FieldDefinition);
+			if (field == null)
+				field = AssemblyResolver.Resolver.Resolve (self);
+			return field;
 		}
 	}
 }
