@@ -55,13 +55,13 @@ namespace Gendarme.Framework.Rocks {
 		/// <summary>
 		/// Check if the method contains an attribute of a specified type.
 		/// </summary>
-		/// <param name="self">The MethodDefinition on which the extension method can be called.</param>
+		/// <param name="self">The MethodReference on which the extension method can be called.</param>
 		/// <param name="attributeName">Full name of the attribute class</param>
 		/// <returns>True if the method contains an attribute of the same name,
 		/// False otherwise.</returns>
-		public static bool HasAttribute (this MethodDefinition self, string attributeName)
+		public static bool HasAttribute (this MethodReference self, string attributeName)
 		{
-			return self.CustomAttributes.ContainsType (attributeName);
+			return self.Resolve ().CustomAttributes.ContainsType (attributeName);
 		}
 
 		/// <summary>
@@ -88,15 +88,16 @@ namespace Gendarme.Framework.Rocks {
 		/// <summary>
 		/// Check if the method, or it's declaring type, was generated by the compiler or a tool (i.e. not by the developer).
 		/// </summary>
-		/// <param name="self">The MethodDefinition on which the extension method can be called.</param>
+		/// <param name="self">The MethodReference on which the extension method can be called.</param>
 		/// <returns>True if the code is not generated directly by the developer, 
 		/// False otherwise (e.g. compiler or tool generated)</returns>
-		public static bool IsGeneratedCode (this MethodDefinition self)
+		public static bool IsGeneratedCode (this MethodReference self)
 		{
-			if (self.CustomAttributes.ContainsAnyType (CustomAttributeRocks.GeneratedCodeAttributes))
+			MethodDefinition method = self.Resolve ();
+			if (method.CustomAttributes.ContainsAnyType (CustomAttributeRocks.GeneratedCodeAttributes))
 				return true;
 
-			return self.DeclaringType.IsGeneratedCode ();
+			return method.DeclaringType.IsGeneratedCode ();
 		}
 
 		/// <summary>
@@ -107,19 +108,20 @@ namespace Gendarme.Framework.Rocks {
 		/// static [void|int] Main (string[] args)
 		/// </code>
 		/// </summary>gre
-		/// <param name="self">The MethodDefinition on which the extension method can be called.</param>
+		/// <param name="self">The MethodReference on which the extension method can be called.</param>
 		/// <returns>True if the method is a valid Main, False otherwise.</returns>
-		public static bool IsMain (this MethodDefinition self)
+		public static bool IsMain (this MethodReference self)
 		{
+			MethodDefinition method = self.Resolve ();
 			// Main must be static
-			if (!self.IsStatic)
+			if (!method.IsStatic)
 				return false;
 
-			if (self.Name != "Main")
+			if (method.Name != "Main")
 				return false;
 
 			// Main must return void or int
-			switch (self.ReturnType.ReturnType.Name) {
+			switch (method.ReturnType.ReturnType.Name) {
 			case "Void":
 			case "Int32":
 				// ok, continue checks
@@ -128,13 +130,13 @@ namespace Gendarme.Framework.Rocks {
 				return false;
 			}
 
-			switch (self.Parameters.Count) {
+			switch (method.Parameters.Count) {
 			case 0:
 				// Main (void)
 				return true;
 			case 1:
 				// Main (string[] args)
-				return (self.Parameters [0].ParameterType.Name == "String[]");
+				return (method.Parameters [0].ParameterType.Name == "String[]");
 			default:
 				return false;
 			}
@@ -143,23 +145,37 @@ namespace Gendarme.Framework.Rocks {
 		/// <summary>
 		/// Check if the method corresponds to the get or set operation on a property.
 		/// </summary>
-		/// <param name="self">The MethodDefinition on which the extension method can be called.</param>
+		/// <param name="self">The MethodReference on which the extension method can be called.</param>
 		/// <returns>True if the method is a getter or a setter, False otherwise</returns>
-		public static bool IsProperty (this MethodDefinition self)
+		public static bool IsProperty (this MethodReference self)
 		{
-			return ((self.SemanticsAttributes & (MethodSemanticsAttributes.Getter | MethodSemanticsAttributes.Setter)) != 0);
+			return ((self.Resolve ().SemanticsAttributes & (MethodSemanticsAttributes.Getter | MethodSemanticsAttributes.Setter)) != 0);
 		}
 
 		/// <summary>
 		/// Check if the method is visible outside of the assembly.
 		/// </summary>
-		/// <param name="self">The MethodDefinition on which the extension method can be called.</param>
+		/// <param name="self">The MethodReference on which the extension method can be called.</param>
 		/// <returns>True if the method can be used from outside of the assembly, false otherwise.</returns>
-		public static bool IsVisible (this MethodDefinition self)
+		public static bool IsVisible (this MethodReference self)
 		{
-			if (self.IsPrivate || self.IsAssembly)
+			MethodDefinition method = self.Resolve ();
+			if (method.IsPrivate || method.IsAssembly)
 				return false;
-			return ((TypeDefinition) self.DeclaringType).IsVisible ();
+			return self.DeclaringType.Resolve ().IsVisible ();
+		}
+
+		/// <summary>
+		/// Resolve a MethodReference into a MethodDefinition.
+		/// </summary>
+		/// <param name="self">The MethodReference on which the extension method can be called.</param>
+		/// <returns>A MethodDefinition if resolved, null otherwise.</returns>
+		public static MethodDefinition Resolve (this MethodReference self)
+		{
+			MethodDefinition method = (self as MethodDefinition);
+			if (method == null)
+				method = AssemblyResolver.Resolver.Resolve (self);
+			return method;
 		}
 	}
 }
